# sqlx-mysql-in-clause-workaround

./: Cargo.toml  README.md  compose.yml
.cargo/: config.toml
src/: main.rs
