[package]
name = "sqlx_mysql_in_clause_workaround"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eyre = "0.6.8"
serde_json = { version = "1.0.87", features = ["alloc"] }
sqlx = { version = "0.6.2", features = ["runtime-tokio-rustls", "mysql", "migrate", "decimal"] }
tokio = { version = "1.21.2", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
